<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Preferences"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="#3C454A"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy_tip__toolbar_title"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title"
            style="@style/header_1"/>
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:background="#A6393C"
            android:id="@+id/settingsBackground">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#A6393C"
                android:id="@+id/settingsBackground">
                <TextView android:text="@string/preferences_setting_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="50dp"
                    android:id="@+id/settings_title"
                    style="@style/header_6"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:background="@drawable/pale_border">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left">

                        <TextView android:text="@string/preferences_default_percent_tip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left|top"
                            android:paddingBottom="10dp"
                            style="@style/header_4" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <Button
                            android:id="@+id/welcome_num_persons_plus_button"
                            android:layout_width="40dp"
                            android:layout_height="45dp"
                            android:text="-"
                            android:textSize="30dp"
                            android:gravity="center"
                            android:onClick="minusPercentageButtonClicked"
                            android:background="@drawable/bordered_button_bg"
                            android:textColor="#A6393C"/>

                        <EditText
                            android:id="@+id/preferences_default_percent_tip"
                            android:text="15"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            style="@style/DefaultTextBodyPale"
                            android:inputType="number"/>

                        <TextView
                            android:layout_marginRight="10dp"
                            android:id="@+id/summary_currency"
                            android:text="%"
                            style="@style/DefaultTextBodyPale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <Button
                            android:id="@+id/welcome_num_persons_plus_button"
                            android:layout_width="40dp"
                            android:layout_height="45dp"
                            android:text="+"
                            android:textSize="30dp"
                            android:gravity="center"
                            android:onClick="plusPercentageButtonClicked"
                            android:background="@drawable/bordered_button_bg"
                            android:textColor="#A6393C"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:background="@drawable/pale_border">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left">

                        <TextView android:text="@string/preferences_currency_symbol"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left|top"
                            android:paddingBottom="10dp"
                            style="@style/header_4" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginLeft="100dp">

                            <RadioButton android:id="@+id/radio_currency_dollar"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/dollar_currency"
                                android:onClick="onCurrencyButtonClicked"
                                style="@style/DefaultTextBodyPale"/>

                            <RadioButton android:id="@+id/radio_currency_euro"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/euro_currency"
                                android:onClick="onCurrencyButtonClicked"
                                style="@style/DefaultTextBodyPale"/>

                            <RadioButton android:id="@+id/radio_currency_pound"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pound_currency"
                                android:onClick="onCurrencyButtonClicked"
                                style="@style/DefaultTextBodyPale"/>

                        </RadioGroup>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="40dp">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/preferences_done_button"
                        android:id="@+id/preferences_done_button"
                        android:onClick="preferencesDoneClick"
                        android:background="@drawable/dark_bg_rounded_corners"
                        android:textAllCaps="false"
                        style="@style/header_4" />

                </LinearLayout>

        </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/toolbar_dropshadow" />
    </FrameLayout>
</LinearLayout>
